--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack.config.js --watch",
-    "build": "webpack --config webpack.config.js",
-    "lint:fix": "eslint --ext .ts ./ --fix --cache"
+    "build": "webpack --config webpack.config.js"
   },
   "keywords": [
     "pb",
@@ -27,7 +26,7 @@
     "json-schema-faker": "^0.5.0-rcv.46",
     "minimist": "^1.2.8",
     "mkdirp": "^2.1.5",
-    "protobufjs": "^7.2.2",
+    "protobufjs": "^7.5.4",
     "protobufjs-cli": "^1.1.1",
     "ts-morph": "^17.0.1",
     "typescript-json-schema": "^0.55.0"
@@ -38,17 +37,17 @@
     "@babel/preset-typescript": "^7.21.0",
     "@types/express": "^4.17.17",
     "@types/minimist": "^1.2.2",
+    "@types/node": "^18.19.130",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "babel-loader": "^9.1.2",
-    "eslint": "^8.36.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-webpack-plugin": "^4.0.0",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.4.2",
     "type-fest": "^3.6.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.9.3",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-node-externals": "^3.0.0"
