--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "sourceMap": true,
     "target": "ES2022",
     "lib": ["ES2022", "DOM"],
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
